added go security and vulnerability to code and CI
